rust/macros/tests/invalid/target/debug/deps/comma_sep-cfd457dcda4d95f4.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/comma_sep-cfd457dcda4d95f4.d: comma_sep.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libcomma_sep-cfd457dcda4d95f4.rmeta: comma_sep.rs Cargo.toml

comma_sep.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
